2007-11-20  Thomas Mills HInkle  <tom@hydrophax>

	* gnome-sudoku/src/lib/simple_debug.py Add walk-through option to step through code.
	* gnome-sudoku/src/lib/gnome_sudoku.py Fix error that made
	status-bar not update after 1st puzzle played.
	* gnome-sudoku/src/lib/game_selector.py Add debug
	statements. Speed up make_new_game_model substantially by calling
	get_puzzles() rather than get_new_puzzle() -- the real solution
	here is to improve the algorithm in get_new_puzzle or eliminate
	it, but this is a quick fix.
	* gnome-sudoku/src/lib/sudoku.py Speed up is_valid_puzzle -- we
	now do a really simple test to make sure we actually have a list
	of 81 integers.

2007-11-08  Thomas H.P. Andersen  <phomes@gmail.com>

	* gnome-sudoku/src/lib/gsudoku.py: Fix calculation of big/small borders.

2007-11-04  Thomas M. Hinkle  <thinkle@cvs.gnome.org>

	* gnome-sudoku/src/lib/gsudoku.py Fix decimal value in float error.
	
	* gnome-sudoku/src/lib/sudoku_maker.py Allow for empty lines in
	sudoku files.

2007-10-29  Thomas M. Hinkle  <thinkle@cvs.gnome.org>

	* gnome-sudoku/src/lib/sudoku_maker.py: Keep generated puzzles in
	plain text files, with one file per difficulty level, rather than
	in one giant pickle. Remove "names" (what did the names mean
	anyway?).

	Organize module into two sections -- "methods for
	accessing puzzles we've created" and "methods for creating new
	puzzles". The methods for accessing have changed substantially
	(and changed names), resulting in changes throughout
	gnome-sudoku. The methods for generating puzzles have changed only
	slightly, with writes to files replacing holding things in memory,
	but the method names etc. staying the same.

	Remove SudokuTracker from this module to the module saver,
	reflecting it's new role (saving games rather than holding all
	games ever played in memory).

	* gnome-sudoku/src/lib/gnome_sudoku.py:

	inactivate_new_game_etc - decorator now returns whatever the
	wrapped function returns.
